--- a/angular/src/app/klubbok/klubbok.component.html
+++ b/angular/src/app/klubbok/klubbok.component.html
@@ -10,7 +10,7 @@
 <body>
                 <h1>Klubb tagság:</h1>
                      <div *ngFor="let t of teszt"> 
-                        <div class="klubbok">{{t.klubb.name}}:</div>
+                        <div class="klubok">{{t.klub.name}}:</div>
                             <div *ngFor="let s of t.szemely">  
                                 <div>{{s.name}}</div>
 </div>
