--- a/angular/src/app/klubbok/klubbok.component.html
+++ b/angular/src/app/klubbok/klubbok.component.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="klubbok.component.css">
 </head>
 <body>
-                <h1>Klubb tagság:</h1>
+                <h1>Klub tagság:</h1>
                      <div *ngFor="let t of teszt"> 
                         <div class="klubok">{{t.klub.name}}:</div>
                             <div *ngFor="let s of t.szemely">  
