--- a/angular/src/app/klubbok/klubbok.component.css
+++ b/angular/src/app/klubbok/klubbok.component.css
@@ -1,12 +1,52 @@
 
-/*.klubok{
-    font-size: larger;
-}*/
 
 
-h1{
-    color: darkseagreen;
-    text-align: center;
+body{
+    background-color: rgb(232, 229, 224);
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: large;
 }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.box{
+    position: relative;
+    display: flex;
+    width: 90vw;
+    height: 90vh;
+     top: 50%;
+     left: 50%;
+     transform: translate(-50%, -50%);
+     background-color: rgb(245, 245, 245);
+     align-items: center;
+     justify-content: center;
+
+
+}
+
+
+.emberek{
+    display: inline-block;
+    margin-bottom: 10px;
+}
+
+.targyak{
+    display: inline-block;
+}
+
+.klubok{
+    font-size: larger;
+    margin-bottom: 20px;
+    text-decoration: underline;
+}
+
+
+.k{
+
+    background-color: rgb(244,233,230);
+    height:20vh;
+    width: 20vw;
+    text-align: center;
+    margin-right: 20px;
+    padding: 20px;
+    border-radius: 10px;
+    
+}
